--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <meta name="Resource-type" content="Document" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Open Graph data -->
-    <meta property="og:site_name" content="Liil Dev" />
-    <meta property="og:title" content="Liil Dev" />
+    <meta property="og:site_name" content="Jas Dev" />
+    <meta property="og:title" content="Jas Dev" />
     <meta property="og:description" content="Software Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://liildev.uz" />
+    <meta property="og:url" content="https://jasdev.uz" />
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="icon" href="logo.jpg" type="image/jpg" />
